@@ -1,5 +1,12 @@
 2008-04-11  Kouhei Sutou  <kou@cozmixng.org>
 
+	* src/cairo.def, src/rb_cairo.c, src/rb_cairo.h, src/lib/cairo.rb,
+	src/rb_cairo_surface.c: Cairo::PSSurface.new,
+	Cairo::PDFSurface.new, Cairo::SVGSurface.new,
+	Cairo::PSSurface#set_size and Cairo::PDFSurface#set_size accept
+	paper description that can be parsed by Cairo::Paper.parse as page
+	size.
+
 	* src/lib/cairo/paper.rb, test/test_paper.rb: use pt as default unit.
 
 	* src/cairo.def, src/rb_cairo.h, src/rb_cairo_surface.c: add
